# spitfire

./: .gitignore  README.md
learnings/: go-primer.md  rust-primer.md
sdks/dotnet/Spitfire/: Placeholder.cs  README.md  Spitfire.csproj
sdks/dotnet/Spitfire.Client/: Placeholder.cs  README.md  Spitfire.Client.csproj
sdks/python/: README.md  pyproject.toml
sdks/python/spitfire_client/: __init__.py
sdks/typescript/: README.md  package.json
